--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "tailwindcss": "^3.3.3"
     },
     "dependencies": {
+        "@geoman-io/leaflet-geoman-free": "^2.17.0",
         "leaflet": "^1.9.4",
         "leaflet-fullscreen": "^1.0.2"
     }
