--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,14 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.2.130",
-        "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0 || ^11.0"
+        "spatie/laravel-package-tools": "^1.19.0",
+        "illuminate/contracts": "^10.0 || ^11.0 || ^12.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.9",
-        "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "pestphp/pest": "^2.1|^3.1",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "phpstan/extension-installer": "^1.1",
